# anki_nav_mcp_server

./: .gitignore  CLAUDE.md  README  README.md  main.py  pyproject.toml
src/: main.py
src/anki_naveen_mcp_server/: __init__.py  anki_client.py  tools.py
src/prompts/: claude_desktop_project_prompt.md
