[project]
name = "anki-naveen-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for Anki integration using AnkiConnect"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6",
    "requests>=2.32.4",
]

[project.scripts]
anki-naveen-mcp-server = "src.main:main"
