[project]
name = "anki-naveen-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for Anki integration using AnkiConnect"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Naveen Reddy", email = "naveenreddy61@gmail.com" }
]
dependencies = [
    "fastmcp>=2.10.6",
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/naveenreddy61/anki_nav_mcp_server"
Repository = "https://github.com/naveenreddy61/anki_nav_mcp_server.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
anki-naveen-mcp-server = "anki_naveen_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_naveen_mcp_server"]

[tool.uv]
package = true
